--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,37 @@
+# Python Virtual Environment
+venv/
+*.venv/
+.venv/
+back/data/venv/ 
+
+# raw data
+back/data/raw/*.csv 
+back/public/FoodImages/
+
+back/data/processed/recipes.json
+
+
+__pycache__/
+*.pyc
 # ==============================
+
+
 # Logs
-# ==============================
 logs
 *.log
 npm-debug.log*
+# ==============================
 
-# ==============================
+
 # Node / JS dependencies
-# ==============================
 node_modules/
 jspm_packages/
 bower_components/
+# ==============================
 
-# ==============================
+
+
 # Build output / production
-# ==============================
 build/
 dist/
 out/
@@ -28,10 +45,10 @@ out/
 .docusaurus/
 .serverless/
 build/Release
+# ==============================
 
-# ==============================
+
 # Cache & temp files
-# ==============================
 .cache
 .parcel-cache
 .nyc_output
@@ -41,31 +58,30 @@ build/Release
 .npm
 .vite.config.js.timestamp-*
 .vite.config.ts.timestamp-*
+# ==============================
 
-# ==============================
+
 # Testing / Coverage
-# ==============================
 coverage/
 *.lcov
+# ==============================
 
-# ==============================
+
 # Environment variables
-# ==============================
 .env
 .env.*
 !.env.example
 
-# ==============================
+
 # OS / IDE
-# ==============================
 .DS_Store
 .node_repl_history
 .vscode/
 .vscode-test
+# ==============================
 
-# ==============================
+
 # Other 
-# ==============================
 pids
 *.pid
 *.seed
