--- a/front/package.json
+++ b/front/package.json
@@ -69,7 +69,8 @@
   "lint-staged": {
     "src/**/*.{ts,tsx,js,jsx}": [
       "eslint --fix",
-      "prettier --write"
+      "prettier --write",
+      "npm test -- --watchAll=false --findRelatedTests --bail"
     ],
     "src/**/*.{json,css,md}": [
       "prettier --write"
